force-app/main/default/objects/Case/fields/NS_Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>NS_Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bad Order</fullName>
            </value>
            <value>
                <fullName>Boulder Strike</fullName>
            </value>
            <value>
                <fullName>Bridge Collapse</fullName>
            </value>
            <value>
                <fullName>Congestion</fullName>
            </value>
            <value>
                <fullName>Crane Failure</fullName>
            </value>
            <value>
                <fullName>Derailment</fullName>
            </value>
            <value>
                <fullName>Detector Stop</fullName>
            </value>
            <value>
                <fullName>Engine Failure</fullName>
            </value>
            <value>
                <fullName>Foreign RR</fullName>
            </value>
            <value>
                <fullName>Held Out</fullName>
            </value>
            <value>
                <fullName>High Winds</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Late Grounding</fullName>
            </value>
            <value>
                <fullName>Signal Issue</fullName>
            </value>
            <value>
                <fullName>Switching Error</fullName>
            </value>
            <value>
                <fullName>Train Meets</fullName>
            </value>
            <value>
                <fullName>Trespasser</fullName>
            </value>
            <value>
                <fullName>Washout</fullName>
            </value>
            <value>
                <fullName>Winter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>