force-app/main/default/objects/Case/fields/NS_DescriptionOfAction__c.field-meta.xml
<CustomField>
    <fullName>NS_DescriptionOfAction__c</fullName>
    <description>Field created as part of Phase 1 enhancement.</description>
    <label>Description of Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industry Work</fullName>
            </value>
            <value>
                <fullName>Interchange</fullName>
            </value>
            <value>
                <fullName>Pick-up</fullName>
            </value>
            <value>
                <fullName>Set Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>