force-app/main/default/objects/Case/fields/NS_DeviceName__c.field-meta.xml
<CustomField>
    <fullName>NS_DeviceName__c</fullName>
    <description>This field captures the device name</description>
    <label>Device Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>