force-app/main/default/objects/Case/fields/NS_DispatchedItemDestination__c.field-meta.xml
<CustomField>
    <fullName>NS_DispatchedItemDestination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>As per phase 1 enhancement, this should be a look up to Operation Station. Same field exists as a text area. Creating this field since we can&#39;t change the field type for the existing field.</description>
    <label>Destination</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (Operating Station)</relationshipLabel>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>