force-app/main/default/objects/Case/fields/NS_DispatchedItemDestination_OLD__c.field-meta.xml
<CustomField>
    <fullName>NS_DispatchedItemDestination_OLD__c</fullName>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>