force-app/main/default/objects/Case/fields/NS_Diversion_Reship__c.field-meta.xml
<CustomField>
    <fullName>NS_Diversion_Reship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Built as per Phase 1 enhancement task.</description>
    <label>Diversion/Reship</label>
    <type>Checkbox</type>
</CustomField>