force-app/main/default/objects/Case/fields/NS_Division__c.field-meta.xml
<CustomField>
    <fullName>NS_Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama</fullName>
            </value>
            <value>
                <fullName>Dearborn</fullName>
            </value>
            <value>
                <fullName>Detroit CSAO</fullName>
            </value>
            <value>
                <fullName>Georgia</fullName>
            </value>
            <value>
                <fullName>Harrisburg</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>North Jersey CSAO</fullName>
            </value>
            <value>
                <fullName>NPBL</fullName>
            </value>
            <value>
                <fullName>Piedmont</fullName>
            </value>
            <value>
                <fullName>Pittsburgh</fullName>
            </value>
            <value>
                <fullName>Pocahontas</fullName>
            </value>
            <value>
                <fullName>South Jersey CSAO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>