force-app/main/default/objects/Case/fields/NS_Dock__c.field-meta.xml
<CustomField>
    <fullName>NS_Dock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Field to service account</description>
    <label>Dock</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>NS_OnlineCustomerService</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Dock)</relationshipLabel>
    <relationshipName>DockRelation</relationshipName>
    <type>Lookup</type>
</CustomField>