force-app/main/default/objects/Case/fields/NS_DockName__c.field-meta.xml
<CustomField>
    <fullName>NS_DockName__c</fullName>
    <description>This field captures the dock name 
EX: 211905</description>
    <label>Dock Name</label>
    <length>8</length>
    <type>Text</type>
</CustomField>