force-app/main/default/objects/Case/fields/NS_DurationOpen__c.field-meta.xml
<CustomField>
    <fullName>NS_DurationOpen__c</fullName>
    <description>To calculate Case age duration open in days and hours</description>
    <formula>IF(
 (TODAY() - DATEVALUE( CreatedDate ))  &lt; 24,
 TEXT( FLOOR(MOD((NOW() - CreatedDate)*24,24))) &amp; &quot;h&quot; ,
 TEXT( FLOOR(NOW()- CreatedDate)) &amp; &quot;d &quot; &amp; 
 TEXT( FLOOR(MOD((NOW() - CreatedDate)*24,24))) &amp; &quot;h&quot;
)</formula>
    <inlineHelpText>To calculate Case age duration open in days and hours</inlineHelpText>
    <label>Duration Open</label>
    <type>Text</type>
</CustomField>