force-app/main/default/objects/Case/fields/NS_Email_10__c.field-meta.xml
<CustomField>
    <fullName>NS_Email_10__c</fullName>
    <description>Case creation auto response email</description>
    <label>Email 10</label>
    <type>Email</type>
</CustomField>