force-app/main/default/objects/Case/fields/NS_Email_Service_Message_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Email_Service_Message_ID__c</fullName>
    <label>Email Service Message ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>