force-app/main/default/objects/Case/fields/NS_EmailAlert_isSent__c.field-meta.xml
<CustomField>
    <fullName>NS_EmailAlert_isSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used by email alert notification process to avoid duplicate email on subsequent edits</description>
    <label>Email Alert isSent</label>
    <type>Checkbox</type>
</CustomField>