force-app/main/default/objects/Case/fields/NS_Embargo__c.field-meta.xml
<CustomField>
    <fullName>NS_Embargo__c</fullName>
    <label>Embargo#</label>
    <length>12</length>
    <type>Text</type>
</CustomField>