force-app/main/default/objects/Case/fields/NS_Equipment__c.field-meta.xml
<CustomField>
    <fullName>NS_Equipment__c</fullName>
    <label>Equipment Number(s)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>