force-app/main/default/objects/Case/fields/NS_Equipment_Init_and_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_Equipment_Init_and_Number__c</fullName>
    <label>Equipment Init and Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>