force-app/main/default/objects/Case/fields/NS_Equipment_Qty__c.field-meta.xml
<CustomField>
    <fullName>NS_Equipment_Qty__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Equipment Qty</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>