force-app/main/default/objects/Case/fields/NS_ErrorClassCode__c.field-meta.xml
<CustomField>
    <fullName>NS_ErrorClassCode__c</fullName>
    <label>Error Class Code</label>
    <type>TextArea</type>
</CustomField>