force-app/main/default/objects/Case/fields/NS_ErrorLocation__c.field-meta.xml
<CustomField>
    <fullName>NS_ErrorLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Error Location</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (Error Location)</relationshipLabel>
    <relationshipName>ErrorLocationCases</relationshipName>
    <type>Lookup</type>
</CustomField>