force-app/main/default/objects/Case/fields/NS_EscalatedReason__c.field-meta.xml
<CustomField>
    <fullName>NS_EscalatedReason__c</fullName>
    <description>Reason for a Case getting escalated</description>
    <label>Escalated Reason</label>
    <type>TextArea</type>
</CustomField>