force-app/main/default/objects/Case/fields/NS_ETAToRepair__c.field-meta.xml
<CustomField>
    <fullName>NS_ETAToRepair__c</fullName>
    <label>ETA to Repair</label>
    <type>Date</type>
</CustomField>