force-app/main/default/objects/Case/fields/NS_ExternalCaseNotes__c.field-meta.xml
<CustomField>
    <fullName>NS_ExternalCaseNotes__c</fullName>
    <description>Captures how the Case is resolved comments</description>
    <label>Case Resolution (External)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>