force-app/main/default/objects/Case/fields/NS_ExtraTrainRequired__c.field-meta.xml
<CustomField>
    <fullName>NS_ExtraTrainRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check if Extra train is required or not</description>
    <label>Extra Train Required</label>
    <type>Checkbox</type>
</CustomField>