force-app/main/default/objects/Case/fields/NS_Field_Location__c.field-meta.xml
<CustomField>
    <fullName>NS_Field_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Built as part of Phase 1 enhancement</description>
    <label>NS Operating Station</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (NS Field Location)</relationshipLabel>
    <relationshipName>NSOperatingStation</relationshipName>
    <type>Lookup</type>
</CustomField>