force-app/main/default/objects/Case/fields/NS_Field_Location_OLD__c.field-meta.xml
<CustomField>
    <fullName>NS_Field_Location_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NS Field Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>NS Field Location</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (NS Field Location)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>