force-app/main/default/objects/Case/fields/NS_FileNumber__c.field-meta.xml
<CustomField>
    <fullName>NS_FileNumber__c</fullName>
    <displayFormat>FN-{0000}</displayFormat>
    <label>File Number</label>
    <type>AutoNumber</type>
</CustomField>