force-app/main/default/objects/Case/fields/NS_ForeignRailroad__c.field-meta.xml
<CustomField>
    <fullName>NS_ForeignRailroad__c</fullName>
    <inlineHelpText>(if applicable)</inlineHelpText>
    <label>Foreign Railroad</label>
    <length>5</length>
    <type>Text</type>
</CustomField>