force-app/main/default/objects/Case/fields/NS_FreightBillNo__c.field-meta.xml
<CustomField>
    <fullName>NS_FreightBillNo__c</fullName>
    <label>Freight Bill No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>