force-app/main/default/objects/Case/fields/NS_FreightPayerContactName__c.field-meta.xml
<CustomField>
    <fullName>NS_FreightPayerContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Freight Payer Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Freight Payer Contact Name)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>