force-app/main/default/objects/Case/fields/NS_FuelRepairLocation__c.field-meta.xml
<CustomField>
    <fullName>NS_FuelRepairLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field created as part of Phase 1 enhancement.</description>
    <label>Fuel/Repair Location</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (Fuel/Repair Location)</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>