force-app/main/default/objects/Case/fields/NS_GateStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_GateStatus__c</fullName>
    <description>Proposed Gate Status in Account Update request</description>
    <label>Gate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Close</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>