force-app/main/default/objects/Case/fields/NS_GrossWeightOfItem__c.field-meta.xml
<CustomField>
    <fullName>NS_GrossWeightOfItem__c</fullName>
    <description>this field gives the value oh the item gross weight</description>
    <label>Gross Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>