force-app/main/default/objects/Case/fields/NS_Hazardous_Error__c.field-meta.xml
<CustomField>
    <fullName>NS_Hazardous_Error__c</fullName>
    <label>Hazardous Error</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Limited Quantity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>Placarding</fullName>
            </value>
            <value>
                <fullName>Radioactive</fullName>
            </value>
            <value>
                <fullName>Weight</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>