force-app/main/default/objects/Case/fields/NS_HoldAdjustLocation1__c.field-meta.xml
<CustomField>
    <fullName>NS_HoldAdjustLocation1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hold/Adjust Location</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>