force-app/main/default/objects/Case/fields/NS_Hours_Since_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>NS_Hours_Since_Last_Activity__c</fullName>
    <formula>IF((ISPICKVAL(Status, &#39;NS_Closed&#39;)||ISPICKVAL(Status, &#39;NS_Cancelled&#39;)),null,
IF(ISNULL(NS_Last_Activity_Time__c),
(FLOOR((Now()-CreatedDate) * 24)),
(FLOOR((Now()-NS_Last_Activity_Time__c) * 24))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time since last outbound activity</inlineHelpText>
    <label>Hours Since Last Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>