force-app/main/default/objects/Case/fields/NS_IdlerRailcars__c.field-meta.xml
<CustomField>
    <fullName>NS_IdlerRailcars__c</fullName>
    <inlineHelpText>Upto 3 Railcars</inlineHelpText>
    <label>Idler Railcars</label>
    <type>TextArea</type>
</CustomField>