force-app/main/default/objects/Case/fields/NS_IM_Please_tell_us_why_Specialist_Fd__c.field-meta.xml
<CustomField>
    <fullName>NS_IM_Please_tell_us_why_Specialist_Fd__c</fullName>
    <label>IM Please tell us why (Specialist Fdbck)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>