force-app/main/default/objects/Case/fields/NS_InspectionDate__c.field-meta.xml
<CustomField>
    <fullName>NS_InspectionDate__c</fullName>
    <label>Inspection Date</label>
    <type>Date</type>
</CustomField>