force-app/main/default/objects/Case/fields/NS_Interaction_Meter__c.field-meta.xml
<CustomField>
    <fullName>NS_Interaction_Meter__c</fullName>
    <label>Interaction Meter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>