force-app/main/default/objects/Case/fields/NS_Interaction_Type_Translation__c.field-meta.xml
<CustomField>
    <fullName>NS_Interaction_Type_Translation__c</fullName>
    <formula>CASE( TEXT( NS_Type__c ),
&quot;Confirm/Update Billing&quot;,&quot;Billing&quot;,
&quot;Damage/Loadshift&quot;,&quot;Shipment Exception&quot;,
&quot;Hazardous&quot;,&quot;Shipment Exception&quot;,
&quot;Misroute&quot;,&quot;Shipment Exception&quot;,
&quot;ETG&quot;,&quot;Tracing&quot;,
TEXT( NS_Type__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interaction Type Translation</label>
    <type>Text</type>
</CustomField>