force-app/main/default/objects/Case/fields/NS_InteractionCategory__c.field-meta.xml
<CustomField>
    <fullName>NS_InteractionCategory__c</fullName>
    <description>Basically its the case record type</description>
    <label>Interaction Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting/Waybilling</fullName>
            </value>
            <value>
                <fullName>Concerned Citizen</fullName>
            </value>
            <value>
                <fullName>Foreign Road</fullName>
            </value>
            <value>
                <fullName>Local Service</fullName>
            </value>
            <value>
                <fullName>Marketing/Sales</fullName>
            </value>
            <value>
                <fullName>Tracing</fullName>
            </value>
            <value>
                <fullName>Transit Exceptions</fullName>
            </value>
            <value>
                <fullName>Business Functions</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Accounting/Billing</fullName>
                <isActive>false</isActive>
                <label>Accounting/Billing</label>
            </value>
            <value>
                <fullName>Billing/Accounting</fullName>
                <isActive>false</isActive>
                <label>Billing/Accounting</label>
            </value>
            <value>
                <fullName>Delayed Shipment</fullName>
                <isActive>false</isActive>
                <label>Delayed Shipment</label>
            </value>
            <value>
                <fullName>Email-to-case</fullName>
                <isActive>false</isActive>
                <label>Email-to-case</label>
            </value>
            <value>
                <fullName>Internal NS</fullName>
                <isActive>false</isActive>
                <label>Internal NS</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <isActive>false</isActive>
                <label>Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>