force-app/main/default/objects/Case/fields/NS_InteractionReason__c.field-meta.xml
<CustomField>
    <fullName>NS_InteractionReason__c</fullName>
    <description>Reason for calling the customer care</description>
    <label>Interaction Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NS_InteractionCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3PL Tracing</fullName>
            </value>
            <value>
                <fullName>Cash Hold</fullName>
            </value>
            <value>
                <fullName>Classification Issues</fullName>
            </value>
            <value>
                <fullName>Concerned Citizen</fullName>
            </value>
            <value>
                <fullName>CSAO Communication</fullName>
            </value>
            <value>
                <fullName>Damage Prevention Holds</fullName>
            </value>
            <value>
                <fullName>Demurrage/Misc Bill/Freight Bill</fullName>
            </value>
            <value>
                <fullName>Diversion/Reship</fullName>
            </value>
            <value>
                <fullName>DQ/RIT Assistance</fullName>
            </value>
            <value>
                <fullName>EDI Request</fullName>
            </value>
            <value>
                <fullName>Embargo/OT5</fullName>
            </value>
            <value>
                <fullName>Expedite Request</fullName>
            </value>
            <value>
                <fullName>FRA/TSA Requests</fullName>
            </value>
            <value>
                <fullName>Freight Claims</fullName>
            </value>
            <value>
                <fullName>High &amp; Wide Movements</fullName>
            </value>
            <value>
                <fullName>Holiday Polling</fullName>
            </value>
            <value>
                <fullName>Interchange Concerns</fullName>
            </value>
            <value>
                <fullName>Intermodal</fullName>
            </value>
            <value>
                <fullName>Inventory Accuracy</fullName>
            </value>
            <value>
                <fullName>Load Moving as Empty</fullName>
            </value>
            <value>
                <fullName>Local Service ETA</fullName>
            </value>
            <value>
                <fullName>Local Service Request</fullName>
            </value>
            <value>
                <fullName>LSS</fullName>
            </value>
            <value>
                <fullName>Misroute</fullName>
            </value>
            <value>
                <fullName>Missed Switch</fullName>
            </value>
            <value>
                <fullName>Pull/Place Errors</fullName>
            </value>
            <value>
                <fullName>Rate Request</fullName>
            </value>
            <value>
                <fullName>Rejects</fullName>
            </value>
            <value>
                <fullName>Request for 418</fullName>
            </value>
            <value>
                <fullName>RIT Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>