force-app/main/default/objects/Case/fields/NS_Interchange__c.field-meta.xml
<CustomField>
    <fullName>NS_Interchange__c</fullName>
    <description>This field captures the date/time when there was an interchange of goods</description>
    <label>Interchange</label>
    <type>DateTime</type>
</CustomField>