force-app/main/default/objects/Case/fields/NS_Internal_Switching__c.field-meta.xml
<CustomField>
    <fullName>NS_Internal_Switching__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Internal Switching in Account Update request</description>
    <label>Internal Switching</label>
    <type>Checkbox</type>
</CustomField>