force-app/main/default/objects/Case/fields/NS_IsCloned__c.field-meta.xml
<CustomField>
    <fullName>NS_IsCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this Case is cloned from another Case.</description>
    <label>Cloned</label>
    <type>Checkbox</type>
</CustomField>