force-app/main/default/objects/Case/fields/NS_IsEscaledOnEdit__c.field-meta.xml
<CustomField>
    <fullName>NS_IsEscaledOnEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Escalation On Edit logic should execute once. This field is to indicate that escalation logic has executed. After escalation, Manager can put the status back to working and in Rep&#39;s queue.</description>
    <label>Is Escalated On Edit</label>
    <type>Checkbox</type>
</CustomField>