force-app/main/default/objects/Case/fields/NS_IssuingPermits__c.field-meta.xml
<CustomField>
    <fullName>NS_IssuingPermits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issuing Permits</label>
    <type>Checkbox</type>
</CustomField>