force-app/main/default/objects/Case/fields/NS_IT_Incident_Number__c.field-meta.xml
<CustomField>
    <fullName>NS_IT_Incident_Number__c</fullName>
    <description>Built as part of Phase 1 enhancement</description>
    <label>IT Incident Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>