force-app/main/default/objects/Case/fields/NS_ItemdispatchedOrigin__c.field-meta.xml
<CustomField>
    <fullName>NS_ItemdispatchedOrigin__c</fullName>
    <label>Origin</label>
    <type>TextArea</type>
</CustomField>