force-app/main/default/objects/Case/fields/NS_Junction__c.field-meta.xml
<CustomField>
    <fullName>NS_Junction__c</fullName>
    <label>Junction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>