force-app/main/default/objects/Case/fields/NS_Last_Activity_Time__c.field-meta.xml
<CustomField>
    <fullName>NS_Last_Activity_Time__c</fullName>
    <label>NS Last Activity Time</label>
    <type>DateTime</type>
</CustomField>