force-app/main/default/objects/Case/fields/NS_Last_Modified_By_Name__c.field-meta.xml
<CustomField>
    <fullName>NS_Last_Modified_By_Name__c</fullName>
    <description>Displays full name of the Last Modified By user.</description>
    <formula>LastModifiedBy.FirstName + &#39; &#39; + LastModifiedBy.LastName</formula>
    <inlineHelpText>Displays full name of the Last Modified By user.</inlineHelpText>
    <label>Last Modified By</label>
    <type>Text</type>
</CustomField>