force-app/main/default/objects/Case/fields/NS_LastEmailAddresses__c.field-meta.xml
<CustomField>
    <fullName>NS_LastEmailAddresses__c</fullName>
    <description>To and CC address of previous incoming email excluding queue emails</description>
    <label>Last Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>