force-app/main/default/objects/Case/fields/NS_LawFileInternalReview__c.field-meta.xml
<CustomField>
    <fullName>NS_LawFileInternalReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Law File/Internal Review</label>
    <type>Checkbox</type>
</CustomField>