force-app/main/default/objects/Case/fields/NS_LoadAdjusted__c.field-meta.xml
<CustomField>
    <fullName>NS_LoadAdjusted__c</fullName>
    <description>This field captures the date when the load was adjusted</description>
    <label>Date Load Adjusted</label>
    <type>Date</type>
</CustomField>