force-app/main/default/objects/Case/fields/NS_LoadEmpty__c.field-meta.xml
<CustomField>
    <fullName>NS_LoadEmpty__c</fullName>
    <label>Load/Empty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Load</fullName>
            </value>
            <value>
                <fullName>Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>