force-app/main/default/objects/Case/fields/NS_LoadIDNumber__c.field-meta.xml
<CustomField>
    <fullName>NS_LoadIDNumber__c</fullName>
    <label>Load ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>