force-app/main/default/objects/Case/fields/NS_Location__c.field-meta.xml
<CustomField>
    <fullName>NS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>NS_ServiceStations__c</referenceTo>
    <relationshipLabel>Cases (Location)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>