force-app/main/default/objects/Case/fields/NS_Logo_3PL_Account__c.field-meta.xml
<CustomField>
    <fullName>NS_Logo_3PL_Account__c</fullName>
    <formula>IF(
OR(Account.NS_X3PL__c=TRUE,
Account.Parent.NS_X3PL__c=TRUE),IMAGE(&quot;/resource/NS3PLLogoStatic&quot;,&#39;3PL&#39;),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case is associated to a 3PL account</inlineHelpText>
    <label>3PL Account</label>
    <type>Text</type>
</CustomField>