force-app/main/default/objects/Case/fields/NS_LongTermSolution__c.field-meta.xml
<CustomField>
    <fullName>NS_LongTermSolution__c</fullName>
    <description>this field captures the long term solution of a case</description>
    <label>Long Term Solution</label>
    <type>TextArea</type>
</CustomField>