force-app/main/default/objects/Case/fields/NS_ManagementNotifications__c.field-meta.xml
<CustomField>
    <fullName>NS_ManagementNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upon selection, this checkbox will update OSS Leadership any time there is a modification to the Case record</description>
    <label>Management Notifications</label>
    <type>Checkbox</type>
</CustomField>