force-app/main/default/objects/Case/fields/NS_MDM_Mastered__c.field-meta.xml
<CustomField>
    <fullName>NS_MDM_Mastered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked the case will go to CLPS team else to the support team</description>
    <label>MDM Mastered</label>
    <type>Checkbox</type>
</CustomField>