force-app/main/default/objects/Case/fields/NS_Measured__c.field-meta.xml
<CustomField>
    <fullName>NS_Measured__c</fullName>
    <label>Measured/Inspected Date</label>
    <type>Date</type>
</CustomField>