force-app/main/default/objects/Case/fields/NS_MechanicalApproval__c.field-meta.xml
<CustomField>
    <fullName>NS_MechanicalApproval__c</fullName>
    <label>Mechanical Approval</label>
    <type>Date</type>
</CustomField>