force-app/main/default/objects/Case/fields/NS_MonitoredAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_MonitoredAccount__c</fullName>
    <formula>Account.NS_MonitoredAccount__c</formula>
    <label>Monitored Account</label>
    <type>Checkbox</type>
</CustomField>