force-app/main/default/objects/Case/fields/NS_Multiple_Locations__c.field-meta.xml
<CustomField>
    <fullName>NS_Multiple_Locations__c</fullName>
    <label>Multiple Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>