force-app/main/default/objects/Case/fields/NS_MyCases__c.field-meta.xml
<CustomField>
    <fullName>NS_MyCases__c</fullName>
    <description>This field is to identify the Cases created by the current user</description>
    <formula>IF(CreatedById = $User.Id , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Cases</label>
    <type>Checkbox</type>
</CustomField>