force-app/main/default/objects/Case/fields/NS_NewWaybill__c.field-meta.xml
<CustomField>
    <fullName>NS_NewWaybill__c</fullName>
    <label>New Waybill</label>
    <type>DateTime</type>
</CustomField>